adicionando detalhes no projeto

--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,15 @@ body {
     --card: #14181f;
     --bordaPrincipal: #1e232d;
     --bordaSecundaria: #4770e0;
-    --input: #0f131a;
-    --inputRange: #2962ff;
-    --inputRangeActive: #2353d6;
-    --inputChecked: #2962ff;
+    --inputPrincipal: #0f131a;
+    --inputPrincipalActive: #0c0c0f;
+    --inputPrincipalFocus: #0c0c0f;
+    --inputSecundario: #2962ff;
+    --inputSecundarioActive: #2353d6;
     --textoPrincipal: #e6eaf0;
     --textoSecundario: #9aa0aa;
     --botao: #2962ff;
-    --botaoActive: #2155d8;
+    --botaoActive: #2353d6;
     --botaoFonteCor: #d6dadf;
     --copy: #2962ff;
     --copyHover: #3d73ff;
