--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,7 +1,7 @@
 /* Card do projeto */
 #card {
     background-color: var(--card);
-    width: 380px;
+    width: var(--widthCard);
     height: 100%;
     border: 1px solid var(--bordaPrincipal);
     border-radius: 20px;
